@@ -23,6 +23,6 @@ fb1.addParallelArrow(size=0.1, displace=-0.06, sense=-1)
 fb2 = Fermion(out_vtx, out2).addArrow(0.8).addLabel(r"\Pquark")
 glu = Gluon(midpoint(out_vtx, out1), midpoint(out_vtx, out2)).set3D()
 glu.invert().bend(0.5).addLabel("\Pgluon", displace=0.35)
-glu.addParallelArrow(size=0.1, displace=0.2, sense=-1)
+glu.addParallelArrow(size=0.1, displace=0.2, sense=-1, curved=True)
 
 fd.draw("pyfeyn-test1.pdf")
